<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">
	
	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".activities.recipe.SingleStepFragment">
		
		<FrameLayout
			android:id="@+id/media_holder"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:contentDescription="@string/description_step_image"
			app:layout_constraintBottom_toTopOf="@+id/guideline_center"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent">
			
			<ImageView
				android:id="@+id/iv_picture"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:contentDescription="@string/description_step_image"
				android:scaleType="centerCrop"
				android:visibility="gone" />
			
			<com.google.android.exoplayer2.ui.PlayerView
				android:id="@+id/video_player"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:visibility="gone"/>
		
		</FrameLayout>
		
		<android.support.constraint.Guideline
			android:id="@+id/guideline_center"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			app:layout_constraintBottom_toBottomOf="@+id/step_navigation_layout"
			app:layout_constraintGuide_percent="0.4"
			app:layout_constraintTop_toTopOf="parent" />
		
		<android.support.v4.widget.NestedScrollView
			android:id="@+id/nested_scroll_view"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_marginEnd="@dimen/margin_normal"
			android:layout_marginStart="@dimen/margin_normal"
			android:layout_marginTop="@dimen/margin_normal"
			app:layout_constraintBottom_toTopOf="@+id/step_navigation_layout"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="@+id/guideline_center">
			
			<TextView
				android:id="@+id/tv_description"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:minLines="1"
				android:textAppearance="@style/TextPrimary"
				tools:text="This is a step of a recipe - description of a step" />
		
		</android.support.v4.widget.NestedScrollView>
		
		
		<android.support.constraint.ConstraintLayout
			android:id="@+id/step_navigation_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/colorPrimaryDark"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="1.0"
			app:layout_constraintStart_toStartOf="parent">
			
			<ImageView
				android:id="@+id/iv_previous_arrow"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:contentDescription="@string/description_previous_step_arrow"
				android:padding="@dimen/margin_normal"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:srcCompat="@drawable/ic_arrow_back_24dp" />
			
			
			<TextView
				android:id="@+id/steps_label"
				style="@style/SingleStepStepCounter"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/margin_normal"
				android:layout_marginEnd="2dp"
				android:layout_marginTop="@dimen/margin_normal"
				android:text="@string/step_label"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toStartOf="@+id/guideline_navigation_center"
				app:layout_constraintTop_toTopOf="parent" />
			
			<android.support.constraint.Guideline
				android:id="@+id/guideline_navigation_center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				app:layout_constraintGuide_percent="0.5" />
			
			<TextView
				android:id="@+id/tv_current_step"
				style="@style/SingleStepStepCounter"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="2dp"
				app:layout_constraintBaseline_toBaselineOf="@+id/steps_label"
				app:layout_constraintStart_toEndOf="@+id/steps_label"
				tools:text="5" />
			
			<TextView
				android:id="@+id/tv_step_count_separator"
				style="@style/SingleStepStepCounter"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/label_step_count_separator"
				app:layout_constraintBaseline_toBaselineOf="@+id/steps_label"
				app:layout_constraintStart_toEndOf="@+id/tv_current_step" />
			
			<TextView
				android:id="@+id/tv_total_steps"
				style="@style/SingleStepStepCounter"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:layout_constraintBaseline_toBaselineOf="@+id/steps_label"
				app:layout_constraintStart_toEndOf="@+id/tv_step_count_separator"
				tools:text="10" />
			
			
			<ImageView
				android:id="@+id/iv_next_arrow"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:contentDescription="@string/description_next_step_arrow"
				android:padding="@dimen/margin_normal"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:srcCompat="@drawable/ic_arrow_forward_24dp" />
		
		</android.support.constraint.ConstraintLayout>
	
	</android.support.constraint.ConstraintLayout>
</layout>
